--- a/source-js/render/template/index.html
+++ b/source-js/render/template/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="Cytos" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cytos.io</title>
+        <title>Cytos</title>
     </head>
     <body>
         <div id="app"></div>
