--- a/source-js/render/react/css/hud.module.css
+++ b/source-js/render/react/css/hud.module.css
@@ -40,6 +40,7 @@
     display: grid;
     grid-template-columns: 150px auto;
     column-gap: 5px;
+    white-space: pre-wrap;
 }
 
 .nerdItem > *:last-child {
