--- a/source-js/render/react/css/overlay.module.css
+++ b/source-js/render/react/css/overlay.module.css
@@ -1,7 +1,7 @@
 .overlay {
     width: 100vw;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     top: 0;
